ko/15.8/user/special-char.rst
======
특수 문자
======

다음 문자는 검색 쿼리 구문에서 특별한 의미를 가지므로 검색어에서 특수 문자로 취급됩니다. 이러한 문자를 검색 문자로 그대로 사용하려면 이스케이프해야 합니다.

::

    + - && || ! ( ) { } [ ] ^ " ~ * ? : \ /

이러한 문자는 필수/제외 지정(``+`` ``-``), 불리언 연산(``&&`` ``||`` ``!``), 그룹화(``( )``), 범위 검색(``[ ]`` ``{ }``), 부스트 검색(``^``), 프레이즈 검색(``"``), 퍼지 검색(``~``), 와일드카드 검색(``*`` ``?``), 필드 지정 검색(``:``) 등의 검색 기능을 호출하는 데 사용됩니다.

예를 들어 URL이나 파일 경로에 포함된 "/", ":", 프로그램 코드에 포함된 "+", "-" 등을 그대로 검색하면 의도하지 않은 검색 결과가 나올 수 있습니다. 이스케이프 방법은 아래를 참조하십시오.


특수 문자 목록과 의미
------------------------

.. list-table::
   :header-rows: 1

   * - 특수 문자
     - 의미・역할
     - 관련 페이지
   * - ``+`` ``-``
     - 필수어・제외어 지정(AND 검색 / NOT 검색)
     - :doc:`search-and` / :doc:`search-not`
   * - ``&&`` ``||``
     - AND 검색 / OR 검색
     - :doc:`search-and` / :doc:`search-or`
   * - ``!``
     - NOT 검색(제외 검색)
     - :doc:`search-not`
   * - ``( )``
     - 검색 조건 그룹화
     - :doc:`advanced-search`
   * - ``[ ]`` ``{ }``
     - 범위 지정 검색(``[ ]`` 는 경계를 포함, ``{ }`` 는 경계를 포함하지 않음)
     - :doc:`search-range`
   * - ``^``
     - 부스트 검색(가중치 부여)
     - :doc:`search-boost`
   * - ``"``
     - 프레이즈 검색(감싼 범위를 하나의 어구로 취급. 이스케이프 대신 사용 가능)
     - :doc:`advanced-search`
   * - ``~``
     - 유사 검색(퍼지 검색)
     - :doc:`search-fuzzy`
   * - ``*`` ``?``
     - 와일드카드 검색
     - :doc:`search-wildcard`
   * - ``:``
     - 검색 필드 지정
     - :doc:`search-field`
   * - ``\``
     - 이스케이프 문자
     - (본 페이지)
   * - ``/``
     - 슬래시(URL 등에 포함된 경우 이스케이프 필요)
     - :doc:`search-field`


사용 방법
------

특수 문자를 검색 문자 그대로 취급하려면 다음 중 하나의 방법을 사용합니다.

* ``\`` 를 문자 바로 앞에 붙여서 이스케이프합니다. 바로 뒤에 오는 문자 1개는 검색 구문이 아니라 일반 문자로 취급됩니다.
* ``"`` 로 검색어를 묶습니다. 묶인 문자열은 프레이즈 검색으로 취급되며, 내부의 특수 문자는 검색 구문으로 해석되지 않습니다. 단, 프레이즈 검색이 되기 때문에 와일드카드 검색(``*`` ``?``) 등의 기능은 사용할 수 없습니다.

::

    aaa\/bbb
    "aaa/bbb"

예를 들어 "C++"를 검색어로 사용하고 싶은 경우에는 다음과 같이 이스케이프합니다.

::

    C\+\+
    "C++"


관련 항목
------------

- :doc:`search-field` - 필드 지정 검색
- :doc:`search-wildcard` - 와일드카드 검색
- :doc:`search-fuzzy` - 유사 검색(퍼지 검색)
- :doc:`advanced-search` - 고급 검색
